# project_torch_classifier

./: .dockerignore  .gitignore  Dockerfile  STRATEGIE_CODIFICATION.md  app.py  citp_df.pkl  codes_manquants_simple.txt  corpus_df.pkl  inference.py  label_encoder.pkl  le probleme.txt  pyproject.toml  requirements.txt  train_labels.pkl
.github/workflows/: Dockerfile  env_train_citp.yaml
mlruns/0/: meta.yaml
mlruns/241428489438752358/: meta.yaml
mlruns/241428489438752358/3930a6edab8d472a82e576d751a257ca/: meta.yaml
mlruns/241428489438752358/81ac6d6c06984578a57f3ae1e3407fb4/: meta.yaml
scripts/: association_variante_metiers.py  clean-caractère.py  clean1_numerique.py  clean2-caractère.py  clean3_mix_mots.py  clean4_enlève_lettre.py  clean5_lettres.py  clean6_pattern_miniscule.py  clean7_pattern2.py  clean8_normaliser_mots.py  clean9_space_letter.py  clean_2_digit.py  clean_data.py  clean_min_accent.py  clean_miniscule_only_col.py  clean_numerique.py  clean_pattern2.py  corpus_complet_minuscule.py  correction_orthographe.py  lignes_qui_existe.py  mauvais_code.py  model_sbert_llm.py  new_train.py  precompute_embeddings.py  predict_jobs_mlflow.py  predict_your_input.py  pretrain2.py  pretrain_memorize.py  semantic.py  test_file_resultat.py  test_on_file.py  train.py  train_model.py  train_on_real_data.py  train_real_data2.py  upload_to_mlflow.py
torchTestClassifiers/data/: datamodule.py
torchTestClassifiers/data/entrainer/: Modifications_NC.csv  Rapport_Caracteres_Speciaux.txt  (+8 more)
torchTextClassifiers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+16 files in other folders)
